--- a/student_life/notebooks/stress-historgram-cluster.ipynb
+++ b/student_life/notebooks/stress-historgram-cluster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,117 +121,91 @@
       "stress_level_stress_3      9\n",
       "stress_level_stress_4     18\n",
       "svg_stress_score_        330\n",
-      "hist_cluster               0\n",
       "Name: 0, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "K = 5\n",
-    "def cluster(estimator, data):\n",
-    "    reduced_data = PCA(n_components=2).fit_transform(data)\n",
-    "    print(estimator)\n",
-    "    print()\n",
+    "# K = 5\n",
+    "# def cluster(estimator, data):\n",
+    "#     reduced_data = PCA(n_components=2).fit_transform(data)\n",
+    "#     print(estimator)\n",
+    "#     print()\n",
     "\n",
-    "    estimator.fit(X)\n",
-    "    centroids = estimator.cluster_centers_\n",
-    "    labels = estimator.labels_\n",
+    "#     estimator.fit(X)\n",
+    "#     centroids = estimator.cluster_centers_\n",
+    "#     labels = estimator.labels_\n",
     "    \n",
-    "    return centroids, label\n",
+    "#     return centroids, label\n",
     "\n",
-    "def stress_weight_mean(stress_dist, N=5):\n",
-    "    out = np.sum([stress_dist['stress_level_stress_{}'.format(i)]*(i+1) for i in range(N)], axis=0)\n",
-    "    total = np.sum([stress_dist['stress_level_stress_{}'.format(i)] for i in range(N)], axis=0)\n",
-    "    return out/total\n",
+    "# def stress_weight_mean(stress_dist, N=5):\n",
+    "#     out = np.sum([stress_dist['stress_level_stress_{}'.format(i)]*(i+1) for i in range(N)], axis=0)\n",
+    "#     total = np.sum([stress_dist['stress_level_stress_{}'.format(i)] for i in range(N)], axis=0)\n",
+    "#     return out/total\n",
     "\n",
-    "print(stress_weight_mean(X))\n",
-    "print(X.loc[0])"
+    "# print(stress_weight_mean(X))\n",
+    "# print(X.loc[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KMeans(algorithm='auto', copy_x=True, init='k-means++', max_iter=300,\n",
-      "    n_clusters=5, n_init=5, n_jobs=None, precompute_distances='auto',\n",
-      "    random_state=None, tol=0.0001, verbose=0)\n",
-      "\n",
-      "[0 0 2 4 0 3 4 3 0 2 4 3 2 4 3 4 2 0 2 4 0 0 4 2 2 4 0 2 4 4 0 3 3 4 0 4 2\n",
-      " 4 2 0 0 4 4 2 2 1]\n",
-      "stress_level_stress_0      0\n",
-      "stress_level_stress_1      9\n",
-      "stress_level_stress_2     87\n",
-      "stress_level_stress_3      6\n",
-      "stress_level_stress_4     27\n",
-      "svg_stress_score_        438\n",
-      "hist_cluster               0\n",
-      "Name: 40, dtype: int64\n",
-      "[ 6  3  0  6 18  6  0  9  3  0  0  0  0  0  3  0 12  0  3  0  0  9  3  3\n",
-      "  3  0 15  0  0  0 15  3  6 36  6  0 48  0  0 27  0  0 24  9 15 60]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nsimsiri/anaconda2/envs/python3/lib/python3.6/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n"
+     "ename": "NameError",
+     "evalue": "name 'CL' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-25a6838ba2a9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mK\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m40\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcluster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCL\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mKMeans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"k-means++\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_clusters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_init\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# print(cen)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'CL' is not defined"
      ]
     }
    ],
    "source": [
-    "K = 5\n",
-    "sid = 40\n",
-    "cen, clus = cluster(CL.KMeans(init=\"k-means++\", n_clusters=K, n_init=K), data)\n",
-    "# print(cen)\n",
-    "print(clus)\n",
-    "X['hist_cluster'] = list(clus)\n",
+    "# K = 5\n",
+    "# sid = 40\n",
+    "# cen, clus = cluster(CL.KMeans(init=\"k-means++\", n_clusters=K, n_init=K), data)\n",
+    "# # print(cen)\n",
+    "# print(clus)\n",
+    "# X['hist_cluster'] = list(clus)\n",
     "\n",
-    "print(X.iloc[sid])\n",
-    "print(X['stress_level_stress_0'].values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = {}\n",
-    "for i, x in enumerate(clus):\n",
-    "    if x in d: d[x]+=[i]\n",
-    "    else: d[x] = [i]\n",
-    "print(d)\n",
-    "import collections\n",
-    "collections.OrderedDict(sorted(d.items()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ori = list(data['cluster_'])\n",
+    "# print(X.iloc[sid])\n",
+    "# print(X['stress_level_stress_0'].values)\n",
+    "# d = {}\n",
+    "# for i, x in enumerate(clus):\n",
+    "#     if x in d: d[x]+=[i]\n",
+    "#     else: d[x] = [i]\n",
+    "# print(d)\n",
+    "# import collections\n",
+    "# collections.OrderedDict(sorted(d.items()))\n",
+    "# ori = list(data['cluster_'])\n",
+    "# # print(ori)\n",
     "# print(ori)\n",
-    "print(ori)\n",
-    "d = {}\n",
-    "for i, x in enumerate(ori):\n",
-    "    if x in d: d[x]+=[i]\n",
-    "    else: d[x] = [i]\n",
-    "print(d)\n",
-    "import collections\n",
-    "pp.pprint(collections.OrderedDict(sorted(d.items())))"
+    "# d = {}\n",
+    "# for i, x in enumerate(ori):\n",
+    "#     if x in d: d[x]+=[i]\n",
+    "#     else: d[x] = [i]\n",
+    "# print(d)\n",
+    "# import collections\n",
+    "# pp.pprint(collections.OrderedDict(sorted(d.items())))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
