--- a/student_life/notebooks/feature_analysis.ipynb
+++ b/student_life/notebooks/feature_analysis.ipynb
@@ -70,7 +70,7 @@
     "        feature_names = feature_max.index.values[1:]\n",
     "        pd.set_option('max_rows', 100)\n",
     "        \n",
-    "        index = feature_data.index.astype(np.int64).values// (10 ** 9 * 60)\n",
+    "        index = feature_data.index.astype(np.int64).values# (10 ** 9 * 60)\n",
     "        \n",
     "        ahead_time = index[1:]\n",
     "        behind_time = index[:-1]\n",
@@ -94,9 +94,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python3_6",
    "language": "python",
-   "name": "python3"
+   "name": "python3_6"
   },
   "language_info": {
    "codemirror_mode": {
@@ -108,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
