--- a/student_life/notebooks/histogram-vis.ipynb
+++ b/student_life/notebooks/histogram-vis.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn.metrics.pairwise.euclidean_distances'; 'sklearn.metrics.pairwise' is not a package",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-0247fdbc896a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstudent_utils\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mstudent_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcollections\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdefaultdict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpairwise\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meuclidean_distances\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0meuclidean_distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdefinitions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdefinitions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.metrics.pairwise.euclidean_distances'; 'sklearn.metrics.pairwise' is not a package"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student ID couldn't be converted to Integer!\n",
+      "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life\n"
      ]
     }
    ],
@@ -34,7 +31,7 @@
     "import importlib\n",
     "import src.utils.student_utils as student_utils\n",
     "from collections import defaultdict\n",
-    "import sklearn.metrics.pairwise.euclidean_distances as euclidean_distance\n",
+    "from sklearn.metrics.pairwise import euclidean_distances as euclidean_distance\n",
     "\n",
     "import src.definitions as definitions\n",
     "import pandas as pd\n",
@@ -63,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1636,9 +1633,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3_6",
+   "display_name": "py361",
    "language": "python",
-   "name": "python3_6"
+   "name": "py361"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1650,7 +1647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
