running varying param exp

--- a/student_life/notebooks/generate_student_life_pickle.ipynb
+++ b/student_life/notebooks/generate_student_life_pickle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,8 +112,7 @@
       "--  -------  -----  ------\n",
       " 0      269    138      34\n",
       " 1      452    224      66\n",
-      " 2      284    152      65\n",
-      "File ../data/training_data/shuffled_splits/training_data_normalized_no_prev_stress_students_greater_than_40_labels.pkl doesn't exists and will be created.\n"
+      " 2      284    152      65\n"
      ]
     }
    ],
@@ -147,6 +146,24 @@
     "# outfile = open('../data/training_data/student_35_3_hr_b_1_hr_a_mean_filled_data.pkl', 'wb')\n",
     "# pickle.dump(data, outfile)\n",
     "# outfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.path.exists('../data/training_data/shuffled_splits/'))"
    ]
   },
   {
