--- a/student_life/notebooks/generate_student_life_pickle.ipynb
+++ b/student_life/notebooks/generate_student_life_pickle.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life/notebooks/../src/utils/read_utils.py:11: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  yaml_file = yaml.load(ymlfile)\n",
-      "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life/notebooks/../src/utils/read_utils.py:11: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  yaml_file = yaml.load(ymlfile)\n",
-      "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life/notebooks/../src/utils/read_utils.py:11: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  yaml_file = yaml.load(ymlfile)\n",
-      "/Users/nsimsiri/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:6692: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "/home/nsimsiri/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py:6692: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
       "of pandas will change to not sort by default.\n",
       "\n",
       "To accept the future behavior, pass 'sort=False'.\n",
@@ -29,90 +23,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Student: 0\n",
-      "\tFailed, skipping...\n",
-      "Student: 1\n",
-      "Student: 2\n",
-      "Student: 3\n",
-      "\tFailed, skipping...\n",
       "Student: 4\n",
-      "Student: 5\n",
-      "Student: 6\n",
-      "\tFailed, skipping...\n",
       "Student: 7\n",
       "Student: 8\n",
-      "Student: 9\n",
-      "\tFailed, skipping...\n",
       "Student: 10\n",
-      "Student: 11\n",
-      "\tFailed, skipping...\n",
-      "Student: 12\n",
-      "Student: 13\n",
-      "\tFailed, skipping...\n",
       "Student: 14\n",
-      "Student: 15\n",
-      "\tFailed, skipping...\n",
       "Student: 16\n",
       "Student: 17\n",
-      "Student: 18\n",
       "Student: 19\n",
-      "Student: 20\n",
-      "\tFailed, skipping...\n",
-      "Student: 21\n",
-      "\tFailed, skipping...\n",
       "Student: 22\n",
       "Student: 23\n",
       "Student: 24\n",
-      "Student: 25\n",
-      "Student: 26\n",
-      "\tFailed, skipping...\n",
-      "Student: 27\n",
-      "Student: 28\n",
-      "\tFailed, skipping...\n",
-      "Student: 29\n",
-      "\tFailed, skipping...\n",
-      "Student: 30\n",
-      "Student: 31\n",
       "Student: 32\n",
       "Student: 33\n",
-      "Student: 34\n",
       "Student: 35\n",
       "Student: 36\n",
-      "Student: 37\n",
-      "\tFailed, skipping...\n",
-      "Student: 38\n",
-      "\tFailed, skipping...\n",
-      "Student: 39\n",
-      "Student: 40\n",
-      "\tFailed, skipping...\n",
-      "Student: 41\n",
-      "Student: 42\n",
       "Student: 43\n",
       "Student: 44\n",
-      "Student: 45\n",
-      "Student: 46\n",
-      "Student: 47\n",
-      "\tFailed, skipping...\n",
-      "Student: 48\n",
-      "\tFailed, skipping...\n",
       "Student: 49\n",
-      "Student: 50\n",
       "Student: 51\n",
       "Student: 52\n",
       "Student: 53\n",
-      "Student: 54\n",
-      "Student: 55\n",
-      "\tFailed, skipping...\n",
-      "Student: 56\n",
-      "\tFailed, skipping...\n",
       "Student: 57\n",
       "Student: 58\n",
-      "Student: 59\n",
       "      Train    Val    Test\n",
       "--  -------  -----  ------\n",
-      " 0      269    138      34\n",
-      " 1      452    224      66\n",
-      " 2      284    152      65\n"
+      " 0      161     83      19\n",
+      " 1      314    150      47\n",
+      " 2      235    131      43\n",
+      "File ../data/training_data/shuffled_splits/training_data_param_resize.pkl doesn't exists and will be created.\n"
      ]
     }
    ],
@@ -190,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
